--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
             x-transition:leave-end="opacity-0 scale-95"
             class="absolute right-0 md:right-auto md:left-1/2 md:transform md:-translate-x-1/2 mt-2 w-48 bg-gray-800 rounded-md shadow-lg py-1 z-20"
           >
-            <a href="https://github.com/jkrishnancp" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">GitHub</a>
+           <!--  <a href="https://github.com/jkrishnancp" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">GitHub</a> -->
             <a href="https://jayakrishnancp.tech" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Blog</a>
             <a href="https://n8n.jayakrishnancp.com/" target="_blank" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">n8n Projects</a>
             <!-- Add more links as needed -->
