--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       cursor: pointer;
     }
     .carousel .card:hover { /* Added .carousel to make this rule more specific */
-      transform: scale(2);
+      transform: scale(1.25); /* Changed from 2 to 1.25 */
       z-index: 10; /* Bring to front on hover */
       transition: transform 0.3s, z-index 0s; /* No delay when bringing to front */
     }
@@ -285,7 +285,7 @@
       position: relative; /* Ensure z-index works */
     }
     .grid-item:hover {
-      transform: scale(2);
+      transform: scale(1.25); /* Changed from 2 to 1.25 */
       background-color: #2a2a2a;
       z-index: 10; /* Bring to front on hover */
       transition: transform 0.2s ease-in-out, background-color 0.2s ease, z-index 0s; /* No delay when bringing to front */
@@ -318,7 +318,7 @@
       z-index: 50;
       overflow-y: auto;
       color: #ccc;
-      border-radius: 8鸣;
+      border-radius: 8px;
     }
     .offcanvas-close {
       position: absolute;
@@ -512,15 +512,15 @@
       itSecurityPoliciesProcedures: { title: 'IT Security Policies & Procedures', description: 'Developing, implementing, and enforcing IT security policies and procedures to ensure compliance and mitigate risks.' },
       networkSecurity: { title: 'Network Security', description: 'Strong background in securing computer networks from intrusion, unauthorized access, and other vulnerabilities.' },
       managedSecurityServices: { title: 'Managed Security Services', description: 'Experience with providing and managing outsourced security services, including monitoring, threat detection, and incident response.' },
-      riskManagement: { title: 'Risk Management', description: 'Skilled in identifying, assessing, and mitigating risks to an organization\'s information assets.' },
-      internalAudits: { title: 'Internal Audits', description: 'Conducting internal audits to assess compliance with security policies, standards, and regulatory requirements.' },
+      riskManagement: { title: 'Risk Management', proficiency: 4 },
+      internalAudits: { title: 'Internal Audits', proficiency: 3 },
       informationSecurityManagement: { title: 'Information Security Management', proficiency: 4 },
       securityStandards: { title: 'Security Standards', description: 'Adherence to and implementation of various security standards and frameworks (e.g., ISO 27001, NIST).' },
-      productSecurity: { title: 'Product Security', description: 'Ensuring the security of products throughout their lifecycle, from design to deployment and maintenance.' },
+      productSecurity: { title: 'Product Security', proficiency: 3 },
       casb: { title: 'CASB', description: 'Experience with Cloud Access Security Brokers (CASB) for enforcing security policies for cloud-based applications and data.' },
       amazonWebServicesAws: { title: 'Amazon Web Services (AWS)', description: 'Proficiency in Amazon Web Services (AWS) cloud platform, including its security features and services.' },
       awsSecurity: { title: 'AWS Security', description: 'Specialized knowledge in securing AWS environments, including identity and access management, network security, and data protection.' },
-      splunk: { title: 'Splunk', description: 'Skilled in using Splunk for security monitoring, incident investigation, and compliance reporting.' },
+      splunk: { title: 'Splunk', proficiency: 4 },
       redHatLinux: { title: 'Red Hat Linux', proficiency: 3 },
       windows: { title: 'Windows', proficiency: 3 },
       restApis: { title: 'REST APIs', proficiency: 2 },
@@ -533,7 +533,7 @@
       serviceDelivery: { title: 'Service Delivery', description: 'Proficiency in ensuring the effective and efficient delivery of security services to meet organizational needs.' },
       enterpriseArchitecture: { title: 'Enterprise Architecture', description: 'Understanding of enterprise architectural principles and their application in designing secure and scalable IT systems.' },
       corporateSecurity: { title: 'Corporate Security', description: 'Knowledge of security practices and strategies to protect an entire organization from various threats.' },
-      thirdPartyVendorManagement: { title: 'Third Party Vendor Management', description: 'Specific expertise in managing security risks associated with third-party vendors and supply chains.' },
+      thirdPartyVendorManagement: { title: 'Third Party Vendor Management', proficiency: 3 },
       leadership: { title: 'Leadership', description: 'Ability to guide, motivate, and inspire teams to achieve common goals and drive success.' },
       executiveLeadership: { title: 'Executive Leadership', proficiency: 4 },
       peopleManagement: { title: 'People Management', proficiency: 3 },
